--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -14,6 +14,9 @@
 @implements IDisposable
 
 <HeadContent>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="js/hlsPlayer.js"></script>
+    <script src="js/notifications.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 </HeadContent>
 
